<resources>
    <string name="app_name">Wagba</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">Sign In</string>
    <string name="slogan">Not your typical Food-Ordering App.</string>


    <string name="Register">Register</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="EmailAdd">Email Address</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>

    <string name="PrevOrders">Previous Orders</string>
    <string name="HelloThere">Hello there,  </string>
    <string name="MyOrders">My Orders</string>
    <string name="RestNearMe">Restaurants Near Me</string>
    <string name="MyCart">My Cart</string>
    <string name="DiffLogin">Log out</string>
    <string name="Menu">Menu</string>
    <string name="RestaurantsNearYou">Restaurants Near You</string>


    <string name="PlaceOrder">Place Order</string>
    <string name="CartTotal">Cart Total:  </string>

    <string-array name="RestaurantsNames">
        <item> KFC </item>
        <item> McDonalds </item>
        <item> Papa Johns </item>
        <item> Burger King </item>
        <item> Starbucks </item>
        <item> Sizzler </item>
        <item> Hardees </item>
        <item> Costa </item>
        <item> Pizza Hut </item>
        <item> Heart Attack </item>
    </string-array>

    <string name="priceTest">EGP1.00</string>
    <string name="AddToCart">Add to cart</string>
    <string name="AlreadyAMember">Already a member?</string>
    <string name="LoginHere">Login here</string>


    <string-array name="DishNames">
        <item> KFC1 </item>
        <item> KFC2 </item>
        <item> KFC3 </item>
        <item> KFC4 </item>
        <item> McDonalds1 </item>
        <item> McDonalds2 </item>
        <item> McDonalds3 </item>
        <item> McDonalds4 </item>
        <item> Papa Johns1 </item>
        <item> Papa Johns2 </item>
        <item> Papa Johns3 </item>
        <item> Papa Johns4 </item>
        <item> Burger King1 </item>
        <item> Burger King2 </item>
        <item> Burger King3 </item>
        <item> Burger King4 </item>
        <item> Starbucks1 </item>
        <item> Starbucks2 </item>
        <item> Starbucks3 </item>
        <item> Starbucks4 </item>
        <item> Sizzler1 </item>
        <item> Sizzler2 </item>
        <item> Sizzler3 </item>
        <item> Sizzler4 </item>
        <item> Hardees1 </item>
        <item> Hardees2 </item>
        <item> Hardees3 </item>
        <item> Hardees4 </item>
        <item> Costa1 </item>
        <item> Costa2 </item>
        <item> Costa3 </item>
        <item> Costa4 </item>
        <item> Pizza Hut1 </item>
        <item> Pizza Hut2 </item>
        <item> Pizza Hut3 </item>
        <item> Pizza Hut4 </item>
        <item> Heart Attack1 </item>
        <item> Heart Attack2 </item>
        <item> Heart Attack3 </item>
        <item> Heart Attack4 </item>
    </string-array>

    <string-array name="DishPrices">
        <item> EGP20 </item>
        <item> EGP30 </item>
        <item> EGP40 </item>
        <item> EGP50 </item>
        <item> EGP20 </item>
        <item> EGP30 </item>
        <item> EGP40 </item>
        <item> EGP50 </item>
        <item> EGP20 </item>
        <item> EGP30 </item>
        <item> EGP40 </item>
        <item> EGP50 </item>
        <item> EGP20 </item>
        <item> EGP30 </item>
        <item> EGP40 </item>
        <item> EGP50 </item>
        <item> EGP20 </item>
        <item> EGP30 </item>
        <item> EGP40 </item>
        <item> EGP50 </item>
        <item> EGP20 </item>
        <item> EGP30 </item>
        <item> EGP40 </item>
        <item> EGP50 </item>
        <item> EGP20 </item>
        <item> EGP30 </item>
        <item> EGP40 </item>
        <item> EGP50 </item>
        <item> EGP20 </item>
        <item> EGP30 </item>
        <item> EGP40 </item>
        <item> EGP50 </item>
        <item> EGP20 </item>
        <item> EGP30 </item>
        <item> EGP40 </item>
        <item> EGP50 </item>
        <item> EGP20 </item>
        <item> EGP30 </item>
        <item> EGP40 </item>
        <item> EGP50 </item>
    </string-array>

    <string name="ViewMenu">View Menu</string>



    <string name="EmptyCart">0</string>
    <string name="EGP">EGP</string>
    <string name="RemoveFromCart">Remove</string>
    <string name="BackHome">Home</string>

    <string name="PendingApproval">Pending Approval</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Schedule Delivery</string>
    <string name="slide_2_desc">Schedule your delivery and surprise your family and friends </string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best Discount on Every Order!</string>

    <string name="slide_4_title">Fastest Delivery</string>
    <string name="slide_4_desc">Fastest Delivery compared to any other Food App</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
</resources>