<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AF5920"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E14E16">

            <ImageView
                android:id="@+id/imageViewdishRow"
                android:layout_width="163dp"
                android:layout_height="130dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/burgerking1" />

            <TextView
                android:id="@+id/textViewPrice"
                android:layout_width="75dp"
                android:layout_height="49dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="2dp"
                android:text="@string/priceTest"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewdishRow" />

            <TextView
                android:id="@+id/textViewDishName"
                android:layout_width="196dp"
                android:layout_height="84dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/app_name"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.185"
                app:layout_constraintStart_toEndOf="@+id/imageViewdishRow"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/AddToCartBtn"
                android:layout_width="127dp"
                android:layout_height="51dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="2dp"
                android:backgroundTint="#48AE10"
                android:text="@string/AddToCart"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>