<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="#FF9E80"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageViewOrderRow"
                android:layout_width="129dp"
                android:layout_height="143dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:contentDescription="TODO"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/burgerking1" />

            <TextView
                android:id="@+id/OrderPrice"
                android:layout_width="182dp"
                android:layout_height="56dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/priceTest"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/OrderTracking" />

            <TextView
                android:id="@+id/OrderTracking"
                android:layout_width="200dp"
                android:layout_height="53dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/RemoveFromCart"
                android:layout_width="130dp"
                android:layout_height="48dp"
                android:layout_marginEnd="56dp"
                android:backgroundTint="#EC1212"
                android:text="@string/RemoveFromCart"
                android:textSize="16sp"
                app:cornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/OrderPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/OrderTracking"
                app:layout_constraintVertical_bias="0.6"
                tools:ignore="TextContrastCheck,TextContrastCheck" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>